loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:3: error: 'while' expected but '}' found.
}
^LoopWhile:4: error: ';' expected but 'else' found.
  else avance()
  ^